2011-09-22  Gary Funck  <gary@intrepid.com>

	* upc-act.c (upc_get_block_factor): test TYPE_HAS_BLOCK_FACTOR()
	before calling TYPE_BLOCK_FACTOR().  This fits better with
	recent encoding of block factor values with a hash table.

2011-09-15  Gary Funck  <gary@intrepid.com>

	Fix ICE involving shared bit field accesses.
	* upc-genericize.c (upc_simplify_shared_ref): Improve
	"shared bit fields not yet implemented" error message
	by adding file/line number location.

2011-09-13  Gary Funck  <gary@intrepid.com>

	* upc-tree.def (UPC_FORALL_STMT): Fix spelling error in comments.
	* upc-lang.c (upc_init_options): Ditto.
	* upc-genericize.c (lookup_unshared_var, upc_shared_addr_rep,
	upc_genericize_expr, upc_genericize_compound_expr): Ditto.
	* upc-act.c (upc_parse_init, upc_build_pointer_type,
	upc_block_factor_insert, upc_pts_is_valid_p): Ditto.

2011-09-07  Gary Funck  <gary@intrepid.com>

	Ensure that UPC pointer-to-shared type alignment is
	propagated to the final type.  Revert to long-standing
	alignment policy: twice the size of a "C" pointer.
	* upc-pts-struct.c (upc_pts_struct_init_type): Ensure that
	shared pointers have twice the alignment of a pointer.
	* upc-act.c (upc_cpp_builtins): Unconditionally emit
	the definition of __UPC_PTS_ALIGN__.

2011-09-02  Gary Funck  <gary@intrepid.com>

	Align UPC pointers-to-shared, only if the target enforces
	strict alignment.
	* upc-pts-struct.c (upc_pts_struct_init_type): Align a
	UPC pointer-to-shared type, only if the target requires
	strict alignment.
	* upc-act.c (upc_cpp_builtins): Output pre-defined macro,
	__UPC_PTS_ALIGN__, only if the target requires strict alignment.

2011-08-29  Gary Funck  <gary@intrepid.com>

	Implement a hash table to record UPC block factors.
	* upc-act.c (upc_block_factor_for_type): New garbage-collected
	hash table.
	(upc_lang_init, upc_finish): Move to end of source file.
	(upc_lang_init): create  upc_block_factor_for_type hash table.